# v6-fontconfig

./: .gitlab-ci.yml  configure.ac  meson.build  meson.options
.gitlab-ci/: ci.template  config.yml  other.yml
conf.d/: link_confs.py  meson.build
doc/: fontconfig-devel.sgml  fontconfig-user.sgml
fc-cache/: fc-cache.c
fc-fontations/: meson.build  names.rs
fc-query/: fc-query.c  meson.build
fc-scan/: fc-scan.c  meson.build
fc-validate/: fc-validate.c  meson.build
fontconfig/: fontconfig.h
src/: fcdir.c  fcfreetype.c  fcftint.h  fcint.h  fcmd5.h  fcpat.c  fcserialize.c  meson.build
test/: meson.build  test_basic.py  test_sandbox.py
